--- a/overlay/packages/services/Telecomm/res/values/config.xml
+++ b/overlay/packages/services/Telecomm/res/values/config.xml
@@ -16,4 +16,10 @@
 
 <resources>
     <bool name="allow_emergency_numbers_in_call_log">true</bool>
+	
+	<!-- Flag indicating if the speed up audio on mt call code should be executed -->
+
+    <!-- Flag indicating if the tty is enabled -->
+    <bool name="tty_enabled">true</bool>
+	
 </resources>
